# kickstart

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: ci.yaml  ci.yml  quick-check.yml  release.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
examples/complex/: .travis.yml  README.md  template.toml
examples/complex/docs/: base.md
examples/complex/{{project_name | slugify}}/: README.md
examples/complex/{{project_name | slugify}}/docs/: base.md
examples/complex/{{project_name | slugify}}/templates/: base.html
examples/default-as-variable/: template.toml
examples/default-from-variable/: template.toml
examples/hooks/: do_stuff.py  greet.py  greet.sh  template.toml
examples/hooks/{{directory_name}}/: {{file_name}}.py
examples/rust-cli/: Cargo.toml  README.md  template.toml
examples/rust-cli/src/: main.rs
examples/slugify/: template.toml  {{title $$ slugify}}.md
examples/super-basic/: template.toml
examples/super-basic/{{directory_name}}/: {{file_name}}.py
examples/with-directory/: README.md  some-files.py  template.toml
src/: cli.rs  definition.rs  errors.rs  filters.rs  generation.rs  interpret.rs  lib.rs  main.rs  print.rs  prompt.rs  template.rs  terminal.rs  utils.rs  validate.rs  value.rs
src/cli/: mod.rs  prompt.rs
src/snapshots/: kickstart__definition__tests__can_validate_definition@default_not_in_choice.toml.snap  kickstart__definition__tests__can_validate_definition@default_not_matching_regex.toml.snap  kickstart__definition__tests__can_validate_definition@invalid_regex.toml.snap  kickstart__definition__tests__can_validate_definition@only_if_matching_type.toml.snap  kickstart__definition__tests__can_validate_definition@only_if_not_filled_yet_var.toml.snap  kickstart__definition__tests__can_validate_definition@only_if_unknown_var.toml.snap  kickstart__definition__tests__can_validate_definition@regex_on_wrong_type.toml.snap  kickstart__definition__tests__can_validate_definition@unsupported_type.toml.snap  kickstart__definition__tests__can_validate_definition@valid.toml.snap
src/snapshots/validation/: default_not_in_choice.toml  default_not_matching_regex.toml  invalid_regex.toml  only_if_matching_type.toml  only_if_not_filled_yet_var.toml  only_if_unknown_var.toml  regex_on_wrong_type.toml  unsupported_type.toml  valid.toml
