[package]
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
description = "A simple way to get started with a project by scaffolding from a template powered by the Tera engine"
edition = "2021"
keywords = ["tera", "scaffolding", "templating", "generator", "boilerplate"]
license = "MIT"
name = "kickstart"
version = "0.5.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
memchr = "2"
regex = "1"
serde = {version = "1", features = ["derive"]}
tera = "1"
heck = "0.5"
term = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[badges]
maintenance = {status = "actively-developed"}
