[package]
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
description = "A simple way to get started with a project by scaffolding from a template powered by the Tera engine"
edition = "2021"
keywords = ["tera", "scaffolding", "templating", "generator", "boilerplate"]
license = "MIT"
name = "kickstart"
version = "0.5.0"

[dependencies]
glob = "0.3"
memchr = "2"
regex = "1"
serde = {version = "1", features = ["derive"]}
tera = "1"
heck = "0.5"
toml = "0.8"
walkdir = "2"
tempfile = "3"

clap = { version = "4", features = ["derive"], optional = true }
term = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1.38.0", features = ["glob"] }

[features]
cli = ["dep:clap", "dep:term", "dep:anyhow"]
required-features = ["cli"]


[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[badges]
maintenance = {status = "actively-developed"}

[[bin]]
name = "kickstart"
required-features = ["cli"]
